Added player interactions (door), added a floor, reformatted code

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -40,5 +40,10 @@
     "typeinfo": "cpp",
     "variant": "cpp",
     "algorithm": "cpp"
-  }
+  },
+  "C_Cpp.vcFormat.newLine.beforeOpenBrace.block": "sameLine",
+  "C_Cpp.vcFormat.newLine.beforeOpenBrace.function": "sameLine",
+  "C_Cpp.vcFormat.newLine.beforeOpenBrace.lambda": "sameLine",
+  "C_Cpp.vcFormat.newLine.beforeOpenBrace.namespace": "sameLine",
+  "C_Cpp.vcFormat.newLine.beforeOpenBrace.type": "sameLine"
 }
